- minor update to main render of first tutorial

--- a/tut1.html
+++ b/tut1.html
@@ -105,16 +105,8 @@
         }
       });
 
-      React.renderComponent(<FilteredList/>, document.getElementById('mount-point'));
+      React.render(<FilteredList/>, document.getElementById('mount-point'));
       
-      /*React.renderComponent(
-          <MyComponent name="foo"/>,
-          document.getElementById('mount-point')
-      );*/
-      /*React.renderComponent(
-        React.DOM.h1(null, 'Hello, world!'),
-        document.getElementById('mount-point')
-      );*/
     </script>
   </body>
 </html>
